--- a/datacollection/user_app/backend/info_files/activities.yaml
+++ b/datacollection/user_app/backend/info_files/activities.yaml
@@ -59,6 +59,7 @@
     - I3: "1 English Muffin"
     - I4: "Shredded Lettuce"
     - I5: "1 tbsp shredded cheese"
+    - I6: "6 oz. ramekin cup"
 - id: 2
   name: "Dressed Up Meatballs"
   category: "Non-Veg"
@@ -121,9 +122,9 @@
       tag: Technique Error
       description: "Not stirring the contents properly or using the wrong utensil."
   required_items:
-    - I0: "1 medium carrot"
-    - I1: "1 medium onion"
-    - I2: "1 garlic clove"
+    - I0: "1/4 medium carrot"
+    - I1: "1/8 medium onion"
+    - I2: "1/8 garlic clove"
     - I3: "5 meatballs"
     - I4: "1/4 cup sweet and sour sauce"
     - I5: "pepper powder"
@@ -263,6 +264,7 @@
     - I0: "1 ramen noodle packet"
     - I1: "1 garlic clove"
     - I2: "1 medium onion"
+    - I3: "Microwave safe cover"
 - id: 5
   name: "Coffee"
   category: "Veg"
@@ -352,13 +354,20 @@
     - I0: "12 ounces water"
     - I1: "1 filter cone"
     - I2: "12 oz coffee beans"
+    - I3: "1 coffee grinder"
+    - I4: "1 kettle"
+    - I5: "1 coffee mug"
+    - I6: "1 paper filter"
+    - I7: "1 coffee dripper"
+    - I8: "1 thermometer"
+    - I9: "1 weighing scale"
 - id: 6
   name: "Apple Crisp in a Mug"
   category: "Veg"
   activity_type: "Microwave"
   steps:
     - S0:
-      description: "Combine 1 tablespoon of softened butter and 1 tablespoon of white sugar in a bowl using a spoon."
+      description: "Combine 1 tablespoon of softened butter (Make sure it is softened) and 1 tablespoon of white sugar in a bowl using a spoon."
     - S1:
       description: "Add 2 tablespoons of flour to the bowl."
     - S2:
@@ -366,7 +375,7 @@
     - S3:
       description: "Add 1/2 teaspoon salt to the bowl."
     - S4:
-      description: "Add 4 dashes of ground cinnamon to the bowl."
+      description: "Add 4 dashes (4 sprinkles or 4/5 tsp) of ground cinnamon to the bowl."
     - S5:
       description: "Mix the crumble mixture well."
     - S6:
@@ -376,7 +385,7 @@
     - S8:
       description: "Microwave crust for 30 seconds on high."
     - S9:
-      description: "Cut 1/2 apple cored into thin slices and add them on top of the crust."
+      description: "Cut 1/2 apple cored (apple after removing outer skin and seeds) into thin slices and add them on top of the crust."
     - S10:
       description: "Add 1 tablespoon of brown sugar to the crust."
     - S11:
@@ -494,7 +503,7 @@
     - S1:
       description: "Microwave the contents of the mug for 1 minute."
     - S2:
-      description: "Add 1-2 pieces of chocolate to the mug."
+      description: "Add 2 pieces of chocolate to the mug."
     - S3:
       description: "Add a 1/5 teaspoon of cinnamon to the mug."
     - S4:
@@ -530,7 +539,7 @@
   activity_type: "Microwave"
   steps:
     - S0:
-      description: "In a large mug, melt 1 tablespoon of butter in the microwave for about 30 seconds."
+      description: "In a large mug, melt 1 tablespoon of softened butter in the microwave for about 30 seconds."
     - S1:
       description: "Roll the butter around in the cup to coat it."
     - S2:
@@ -648,6 +657,7 @@
     - I1: "Butter"
     - I2: "Jam"
     - I3: "5 toothpicks"
+    - I4: "Floss"
 - id: 11
   name: "Garden Fresh Sweet Corn Salsa"
   category: "Veg"
@@ -709,9 +719,9 @@
     - I0: "1/4 cup cilantro"
     - I1: "1 garlic clove"
     - I2: "1 jalapeno"
-    - I3: "1 lime"
-    - I4: "1 onion"
-    - I5: "1 tomato"
+    - I3: "1/2 lime"
+    - I4: "1/2 onion"
+    - I5: "1/2 tomato"
     - I6: "1/4 tsp salt"
     - I7: "1 corn cob"
 - id: 12
@@ -730,7 +740,7 @@
     - S4:
       description: "Sprinkle mozzarella cheese on top of the tomato throughout the platter."
     - S5:
-      description: "Garnish with seasoning."
+      description: "Garnish with italian seasoning."
     - S6:
       description: "Season with ¼ teaspoon black pepper."
     - S7:
@@ -784,7 +794,7 @@
     - S3:
       description: "Microwave the corn for 2 minutes."
     - S4:
-      description: "Add 1 teaspoon of butter and 1 teaspoon of pepper powder to the bowl and then stir."
+      description: "Add 1 teaspoon of softened butter and 1 teaspoon of pepper powder to the bowl and then stir."
     - S5:
       description: "Microwave the corn for 3 more minutes."
     - S6:
@@ -829,7 +839,7 @@
     - I1: "1 tsp butter"
     - I2: "1 tsp pepper"
     - I3: "1 tsp salt"
-    - I4: "1 Lime"
+    - I4: "1/3 Lime"
 - id: 14
   name: "Spicy Masala Bread"
   category: "Veg"
@@ -846,7 +856,7 @@
     - S4:
       description: "Cut 2 slices of bread into bite-size pieces."
     - S5:
-      description: "Heat a pan with 1 tbsp oil."
+      description: "Heat a pan with 1 tbsp oil on medium heat"
     - S6:
       description: "Add 1/2 tsp cumin and wait till it sizzles."
     - S7:
@@ -937,8 +947,8 @@
     - I1: "3 tbsp cilantro"
     - I2: "2 bread slices"
     - I3: "1 tbsp oil"
-    - I4: "1 onion"
-    - I5: "1 tomato"
+    - I4: "1/2 medium onion"
+    - I5: "1 medium tomato"
     - I6: "1/2 tsp cumin"
     - I7: "1 tsp ginger garlic paste"
     - I8: "1 tsp salt"
@@ -957,7 +967,7 @@
     - S2:
       description: "Take 1 tomato."
     - S3:
-      description: "Chop them up roughly and puree them without any water."
+      description: "Chop them up roughly and puree them without any water in a blender/mixer."
     - S4:
       description: "Heat 3 tbsp oil in a pan over medium heat."
     - S5:
@@ -979,7 +989,7 @@
     - S13:
       description: "Take the pan off the heat."
     - S14:
-      description: "Allow the chutney to cool down before serving."
+      description: "Transfer it to a serving bowl."
   error_hints:
     - E0:
       tag: Preparation Error
@@ -1049,7 +1059,7 @@
     - S5:
       description: "Chop 1 tbsp cilantro."
     - S6:
-      description: "Heat 2 tbsp oil in a heavy-bottomed or nonstick pan, and add chopped onions and 1/3 tsp salt."
+      description: "Heat 2 tbsp oil in a heavy-bottomed or nonstick pan on medium heat, and add chopped onions and 1/3 tsp salt."
     - S7:
       description: "Sauté the onions on medium heat until they are soft and translucent."
     - S8:
@@ -1111,13 +1121,13 @@
   required_items:
     - I0: "1 egg"
     - I1: "1 tbsp milk"
-    - I2: "1 onion"
+    - I2: "1/4 medium onion"
     - I3: "2/3 tsp salt"
     - I4: "2 teaspoons ginger grated"
     - I5: "2 garlic cloves"
     - I6: "1/8 tsp turmeric"
     - I7: "1 green chili"
-    - I8: "1 tomato"
+    - I8: "1/4 tomato"
     - I9: "3 scallions"
     - I10: "1 teaspoon garam masala"
     - I11: "1 tbsp cilantro"
@@ -1128,19 +1138,19 @@
   activity_type: "Nothing"
   steps:
     - S0:
-      description: "In a mixing bowl, whip 1 cup of chilled curd until smooth."
+      description: "In a mixing bowl, whisk 1 cup of chilled curd until smooth."
     - S1:
       description: "Use fresh homemade or packaged curd."
     - S2:
       description: "Avoid using sour-tasting curd."
     - S3:
-      description: "Rinse, peel and grate 1 medium-sized cucumber(You need 1 cup of grated cucumber)."
+      description: "Rinse, peel and chop or grate 1 medium-sized cucumber (You need 1 cup of chopped or grated cucumber)."
     - S4:
       description: "Add the cucumber to the whisked curd."
     - S5:
-      description: "Add 1 teaspoon of cumin powder, ½ teaspoon of chaat masala powder, ¼ teaspoon of red chilli powder and 1/4 teaspoon salt."
+      description: "Add 1 teaspoon of cumin powder, 1/2 teaspoon of chaat masala powder, 1/4 teaspoon of red chilli powder and 1/4 teaspoon salt."
     - S6:
-      description: "Lastly, add 1 tablespoon of chopped cilantro leaves (cilantro)."
+      description: "Lastly, add 1 tablespoon of chopped cilantro leaves"
     - S7:
       description: "Combine all the ingredients."
   error_hints:
@@ -1177,87 +1187,28 @@
     - I5: "1/4 tsp salt"
     - I6: "1 tbsp cilantro"
 - id: 18
-  name: "Miso Soup"
-  category: "Veg"
-  activity_type: "Pan"
-  steps:
-    - S0:
-      description: "Chop 2 scallions."
-    - S1:
-      description: "Cut 1/4 block of tofu into 1-inch cubes."
-    - S2:
-      description: "Bring 2 cups of water to a slow simmer in a medium pot."
-    - S3:
-      description: "Add 1 tbsp shredded seaweed."
-    - S4:
-      description: "Allow it to simmer for at least 4 to 5 minutes."
-    - S5:
-      description: "Reduce the heat to very low and add the 1/3 cup white miso, chopped scallions, tofu, and 1/8 teaspoon soy sauce."
-    - S6:
-      description: "Stir until the miso is well dissolved."
-    - S7:
-      description: "Ladle into bowls, serve hot, and enjoy."
-  error_hints:
-    - E0:
-      tag: Preparation Error
-      description: "The recipe doesn't specify how finely the scallions should be chopped, so the cook may chop them too finely or leave large pieces."
-    - E1:
-      tag: Preparation Error
-      description: "The recipe doesn't specify what type of tofu to use (silken, firm, extra-firm), so the cook may use the wrong type."
-    - E2:
-      tag: Measurement Error
-      description: "The recipe doesn't specify the size of the tofu block, so the cook may use too much or too little tofu."
-    - E3:
-      tag: Technique Error
-      description: "The recipe doesn't specify how to cut the tofu into 1-inch cubes, so the cook may cut it unevenly or into pieces that are too small or large."
-    - E4:
-      tag: Temperature Error
-      description: "The recipe doesn't specify what temperature the water should be brought to, so the cook may bring it to a boil or not simmer it enough."
-    - E5:
-      tag: Timing Error
-      description: "The recipe doesn't specify how long to simmer the seaweed, so the cook may simmer it for too long or not long enough."
-    - E6:
-      tag: Measurement Error
-      description: "The recipe doesn't specify the exact amount of miso to use, so the cook may use too much or too little."
-    - E7:
-      tag: Temperature Error
-      description: "The recipe doesn't specify how low to reduce the heat, so the cook may reduce it too much or not enough."
-    - E8:
-      tag: Order Error
-      description: "The recipe doesn't specify when to add the soy sauce, so the cook may add it at the wrong time or forget to add it altogether."
-    - E9:
-      tag: Temperature Error
-      description: "The recipe doesn't specify the serving temperature, so the cook may serve it too hot or too cold."
-  required_items:
-    - I0: "2 cups water"
-    - I1: "1 tbsp shredded seaweed"
-    - I2: "1/3 cup white miso"
-    - I3: "2 scallions"
-    - I4: "1/4 block silken tofu"
-    - I5: "1/8 tsp soy sauce"
-- id: 19
   name: "Zoodles"
   category: "Veg"
   activity_type: "Pan"
   steps:
     - S0:
-      description: "Spiralize 2 medium zucchini into thin noodles using a spiralizer."
+      description: "Spiralize 1 medium zucchini into thin noodles using a spiralizer."
     - S1:
-      description: "Heat a large pan on medium-high heat."
+      description: "Heat a large pan on medium heat."
     - S2:
-      description: "Melt 2 tablespoons of butter."
+      description: "Melt 1 tablespoons of softened butter."
     - S3:
-      description: "Peel 2 garlic cloves."
+      description: "Peel 1 garlic cloves."
     - S4:
-      description: "Add 2 large minced garlic cloves."
+      description: "Add 1 large minced garlic cloves to the pan."
     - S5:
-      description: "Cook garlic until fragrant (about 1-2 minutes)."
+      description: "Cook garlic until fragrant (about 1 minutes)."
     - S6:
       description: "Be careful not to burn garlic."
     - S7:
-      description: "Add the zucchini noodles and 1/3 cup grated parmesan cheese and season with salt & pepper to taste."
+      description: "Add the zucchini noodles and 1/6 cup grated parmesan cheese and season with salt & pepper to taste."
     - S8:
-      description: "Cook for 1-2 minutes or until the zoodles are al dente."
+      description: "Cook for 1 minutes or until the zoodles are done."
     - S9:
       description: "Remove from heat and serve immediately."
     - S10:
@@ -1300,12 +1251,12 @@
       tag: Missing Step
       description: "The recipe doesn't mention if the parmesan cheese should be added gradually or all at once, so the cook may not mix it evenly."
   required_items:
-    - I0: "2 medium Zuchini spiralized"
-    - I1: "2 tbsp butter"
-    - I2: "2 garlic cloves"
-    - I3: "1/3 cup grated parmesan cheese"
+    - I0: "1 medium Zucchini"
+    - I1: "1 tbsp butter"
+    - I2: "1 garlic cloves"
+    - I3: "1/6 cup grated parmesan cheese"
     - I4: "salt & pepper to taste"
-- id: 20
+- id: 19
   name: "Grilled Cheese Sandwich"
   category: "Veg"
   activity_type: "Pan"
@@ -1315,9 +1266,9 @@
     - S1:
       description: "Top it with 2 slices of American cheese."
     - S2:
-      description: "Top with the remaining bread slice to make 1 sandwich."
+      description: "Top with the another bread slice to make 1 sandwich."
     - S3:
-      description: "Spread the outsides of the sandwiches thinly with butter."
+      description: "Spread softened butter on the outside surface of the sandwich"
     - S4:
       description: "Heat a nonstick skillet or griddle over medium-low heat."
     - S5:
@@ -1366,15 +1317,15 @@
     - I0: "2 bread slices"
     - I1: "2 American cheese slices"
     - I2: "3 tbsp softened unsalted butter"
-- id: 21
+- id: 20
   name: "Sauted Mushrooms"
   category: "Veg"
   activity_type: "Pan"
   steps:
     - S0:
-      description: "Chop 2 shallots."
+      description: "Chop 1 shallot"
     - S1:
-      description: "Rinse 5 mushrooms under cold water and immediately pat them dry with a paper towel."
+      description: "Rinse 3 mushrooms under cold water and immediately pat them dry with a paper towel."
     - S2:
       description: "Pull out the stems."
     - S3:
@@ -1382,17 +1333,17 @@
     - S4:
       description: "Heat 1 tbsp olive oil in a large skillet over medium-high heat."
     - S5:
-      description: "Once the pan is hot, add the mushrooms and cook for 3-5 minutes, stirring often, until they start to soften and brown."
+      description: "Once the pan is hot, add the mushrooms and cook for 3 minutes, stirring often, until they start to soften and brown."
     - S6:
-      description: "Add 1/8 cup chopped shallot and cook, often stirring, for 1 minute."
+      description: "Add chopped shallot and cook, often stirring, for 1 minute."
     - S7:
-      description: "Peel 4 garlic cloves and mince them."
+      description: "Peel 2 garlic cloves and mince them."
     - S8:
-      description: "Add 4 cloves of minced garlic and 1/2 tbsp balsamic vinegar and cook, often stirring, for 1 minute."
+      description: "Add 2 cloves of minced garlic and 1/4 tbsp balsamic vinegar and cook, often stirring, for 1 minute."
     - S9:
       description: "Season with salt and pepper to taste."
     - S10:
-      description: "Serve."
+      description: "Transfer it to a serving dish."
   error_hints:
     - E0:
       tag: Preparation Error
@@ -1422,13 +1373,13 @@
       tag: Measurement Error
       description: "The recipe doesn't specify how much salt and pepper to use, so the cook may use too much or too little."
   required_items:
-    - I0: "5 cremini mushrooms"
+    - I0: "3 cremini mushrooms"
     - I1: "1 tbsp olive oil"
-    - I2: "2 shallot"
-    - I3: "4 garlic cloves"
-    - I4: "1/2 tbsp balsamic vinegar"
+    - I2: "1 shallot"
+    - I3: "2 garlic cloves"
+    - I4: "1/4 tbsp balsamic vinegar"
     - I5: "salt and pepper, to taste"
-- id: 22
+- id: 21
   name: "Blender Banana Pancakes"
   category: "Non-Veg"
   activity_type: "Pan"
@@ -1500,7 +1451,7 @@
     - I4: "1/2 tsp baking powder"
     - I5: "1 strawberry"
     - I6: "maple syrup"
-- id: 23
+- id: 22
   name: "Herb Omlet with Fried Tomatoes"
   category: "Non-Veg"
   activity_type: "Pan"
@@ -1566,7 +1517,7 @@
     - I2: "1 egg"
     - I3: "1/2 tsp ground pepper"
     - I4: "2 tbsp cilantro"
-- id: 24
+- id: 23
   name: "Broccoli Stir Fry"
   category: "Veg"
   activity_type: "Pan"
@@ -1643,7 +1594,7 @@
     - I8: "8 broccoli florets"
     - I9: "3 cremini mushrooms"
     - I10: "1 bell pepper"
-- id: 25
+- id: 24
   name: "Cheese Tomato Melt"
   category: "Veg"
   activity_type: "Pan"
@@ -1687,7 +1638,7 @@
     - I0: "1 tomato"
     - I1: "2 tbsp shredded lowfat mozzarella cheese"
     - I2: "4 crackers"
-- id: 26
+- id: 25
   name: "Pan Fried Tofu"
   category: "Veg"
   activity_type: "Pan"
@@ -1749,7 +1700,7 @@
     - I2: "salt"
     - I3: "1 tbsp sesame oil"
     - I4: "1 tbsp soy sauce"
-- id: 27
+- id: 26
   name: "Mug Cake"
   category: "Veg"
   activity_type: "Pan"
@@ -1837,7 +1788,7 @@
     - I5: "2 tbsp water"
     - I6: "¼ tsp vanilla extract"
     - I7: "4 tbsp choclate frosting"
-- id: 28
+- id: 27
   name: "Cheese Pimiento"
   category: "Veg"
   activity_type: "Pan"
@@ -1877,7 +1828,7 @@
     - I2: "1 tbsp butter"
     - I3: "1/2 tsp salt"
     - I4: "1/2 tsp pepper"
-- id: 29
+- id: 28
   name: "Spicy Tuna Avocado Wraps"
   category: "Non-Veg"
   activity_type: "Pan"
@@ -1938,7 +1889,7 @@
     - I5: "4 large lettuce leaves"
     - I6: "1/4 tsp Salt"
     - I7: "1/4 tsp pepper"
-- id: 30
+- id: 29
   name: "Caprese Bruschetta"
   category: "Veg"
   activity_type: "Pan"
@@ -1993,7 +1944,7 @@
     - I4: "1/16 cup fresh basil leaves"
     - I5: "1/4 tsp salt"
     - I6: "1/4 tsp pepper"
-- id: 31
+- id: 30
   name: "Creamy Tomato Basil Soup"
   category: "Veg"
   activity_type: "Pan"
