--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,4 @@ dmypy.json
 !/annotations/recipe_extraction/output/recipes_with_max_5_actions.csv
 
 !/annotations/recipe_extraction/output/recipes_with_max_7_actions.csv
+/.idea/
