--- a/datacollection/user_app/docker-compose.yaml
+++ b/datacollection/user_app/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
     depends_on:
       - backend
     restart: unless-stopped
+
   backend:
     build:
       context: ./backend
@@ -17,6 +18,18 @@ services:
     ports:
       - "5000:5000"
     restart: unless-stopped
+
+  nginx:
+    image: nginx:stable-alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - frontend
+      - backend
+    restart: unless-stopped
+
 networks:
   default:
     name: my_network
